--- a/BSBuilder/build.properties
+++ b/BSBuilder/build.properties
@@ -4,4 +4,5 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
-               libs/velocity-1.7-dep.jar
+               libs/velocity-1.7-dep.jar,\
+               libs/commons-io-2.4.jar
