--- a/BSBuilder/build.properties
+++ b/BSBuilder/build.properties
@@ -5,4 +5,5 @@ bin.includes = plugin.xml,\
                .,\
                icons/,\
                libs/velocity-1.7-dep.jar,\
-               libs/commons-io-2.4.jar
+               libs/commons-io-2.4.jar,\
+               libs/js.jar
