--- a/BSBuilder/src/bsbuilder/resources/documentation/readme.txt.template
+++ b/BSBuilder/src/bsbuilder/resources/documentation/readme.txt.template
@@ -1,5 +1,12 @@
 
 
+Libs Used:
+1.  BackboneJS
+2.  Backgrid - for rendering data in a grid
+3.  jQuery.maskedinput - for masking input fields (http://digitalbush.com/projects/masked-input-plugin/)
+4.  bootstrap datepicker - for the calendar attached to 'Date' fields (http://www.eyecon.ro/bootstrap-datepicker)
+5.  bootstrap - for styling
+
 Changing the pagesize of the Grid
 	- open the ${domainClass}Collection.js and change the 'pageSize' attribute of 
 		the 'state' object attribute object
@@ -11,4 +18,9 @@ Flow for rendering a list of ${domainClass}
 			on the app_router (still found on the router.js file)
 	3.  The bound function then instantiates a ${domainClass}Collection which extends the PageableCollection.
 	4.  Also the bound function instantiate
+	
+Adding Validations:
+    The generated code is already pre-scaffolded to implement validation.
+    To implement validation, open your Backbone model js file and implement the
+    logic in the 'validate' attribute
 	
