--- a/webutils/pom.xml
+++ b/webutils/pom.xml
@@ -48,5 +48,10 @@
 			<artifactId>esapi</artifactId>
 			<version>2.1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+		</dependency>
 	</dependencies>
 </project>
