--- a/webutils/pom.xml
+++ b/webutils/pom.xml
@@ -53,5 +53,11 @@
 			<artifactId>servlet-api</artifactId>
 			<version>2.5</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.9</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
