added 'Wizard Type' Presenters

--- a/BSBuilder/plugin.xml
+++ b/BSBuilder/plugin.xml
@@ -59,6 +59,13 @@
                enablesFor="1"
                id="Oleng2.newPresenter">
          </action>
+         <action
+               label="Add New Wizard-Type Presenter.."
+               class="bsbuilder.wizards.backbone.actions.AddNewWizardTypePresenterAction"
+               menubarPath="Oleng2.menu1/group3"
+               enablesFor="1"
+               id="Oleng2.newWizardTypePresenter">
+         </action>
          <!--action
                label="Add Third Party JS Lib"
                class="bsbuilder.wizards.backbone.actions.AddNewJSLibAction"
