--- a/BSBuilder/.classpath
+++ b/BSBuilder/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="libs/jtidy.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/js.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-io-2.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/velocity-1.7-dep.jar"/>
