--- a/BSBuilder/build.properties
+++ b/BSBuilder/build.properties
@@ -6,4 +6,5 @@ bin.includes = plugin.xml,\
                icons/,\
                libs/velocity-1.7-dep.jar,\
                libs/commons-io-2.4.jar,\
-               libs/js.jar
+               libs/js.jar,\
+               libs/jtidy.jar
